<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back"
        app:tint="@color/ColorWhite"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_tick"
        app:tint="@color/ColorWhite"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/ednotiztitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/imgBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/notes_title"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:maxLines="1"
        android:background="@null"
        android:ellipsize="end"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/manrope_bold"

        />

    <TextView
        android:id="@+id/tvDataTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/ednotiztitel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:textColor="@color/ColorGray"
        android:textColorHint="@color/ColorGray"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/_8ssp"
        android:fontFamily="@font/manrope_bold"

        />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tvDataTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <View
            android:id="@+id/colorView"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:background="@color/ColorPink"
            android:layout_marginStart="@dimen/_5sdp"

            />

        <EditText
            android:id="@+id/ednotizSubTitel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@null"
            android:hint="@string/notes_sub_title"
            android:textColor="@color/ColorWhite"
            android:textColorHint="@color/ColorGray"
            android:maxLines="1"
            android:inputType="text"
            android:ellipsize="end"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/manrope_regular"
            />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutomage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/l1">


        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_margin="@dimen/_15sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"

            android:src="@drawable/ic_delete"
            />


         <ImageView
        android:id="@+id/imgNote"
        android:layout_width="match_parent"
             android:visibility="gone"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        tools:ignore="MissingConstraints" />



    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutWebUrl"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/layoutomage"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/edWeblink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/web_url"
                android:textColor="@color/ColorWhite"
                android:textColorHint="@color/ColorGray"
                android:maxLines="1"
                android:layout_weight="1"
                android:text="http://"
                android:background="@null"
                android:inputType="textMultiLine"
                android:ellipsize="end"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/manrope_bold"

                />

            <ImageView
                android:id="@+id/imgURlDelete"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_baseline_cancel_24"
                android:visibility="gone"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/ColorWhite"
                android:textSize="@dimen/_12ssp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/manrope_bold"
                android:background="@color/colorAccent"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/ColorWhite"
                android:id="@+id/btnOk"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvWebLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="1"
            android:autoLink="web"
            android:ellipsize="end"
            android:fontFamily="@font/manrope_bold"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/ColorGray"
            android:textColorHint="@color/ColorGray"
            android:textSize="@dimen/_12ssp"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imgURLDelete"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_delete"
            android:visibility="gone" />


    </LinearLayout>


    <EditText
        android:id="@+id/ednotizDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@null"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:hint="@string/notes_desc"
        android:inputType="textMultiLine"
        android:maxLines="1"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        
        <ImageView
            android:id="@+id/imgMore"
            android:layout_gravity="center"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/img_bar"
             />

        </FrameLayout>







</androidx.constraintlayout.widget.ConstraintLayout>